tests/error/mandatory_return.gw
fun int test() {
  {
    return 2;
  }
}
